fix navigation spacing

--- a/website/src/components/Navigation/Navigation.scss
+++ b/website/src/components/Navigation/Navigation.scss
@@ -53,9 +53,8 @@ $tmp-nav-toggle-bar-spacing-between: 0.375rem;
 .tmp-nav__system-list-item-link {
   color: $ecl-color-text;
   display: block;
-  font-size: 1.125rem;
-  font-weight: bold;
-  line-height: 1.333;
+  font: $ecl-font-l;
+  font-weight: $ecl-font-weight-bold;
   padding: $ecl-spacing-s 0 calc(#{$ecl-spacing-s} - 4px);
   text-decoration: none;
 }
@@ -66,7 +65,7 @@ $tmp-nav-toggle-bar-spacing-between: 0.375rem;
 
 .tmp-nav__group-list-item {
   background-color: $ecl-color-grey-5;
-  border: 4px solid transparent;
+  border-width: 0;
   box-sizing: border-box;
   color: $ecl-color-text;
   display: block;
@@ -96,7 +95,7 @@ $tmp-nav-toggle-bar-spacing-between: 0.375rem;
 
 .tmp-nav__page-list-item {
   background-color: $ecl-color-grey-5;
-  border-left: 4px solid transparent;
+  border-width: 0;
   color: $ecl-color-text;
   display: block;
   font: $ecl-font-m;
@@ -116,6 +115,7 @@ $tmp-nav-toggle-bar-spacing-between: 0.375rem;
 
 .tmp-nav__page-list-item--active {
   border-left: 4px solid $ecl-color-yellow-100;
+  padding-left: calc(#{$ecl-spacing-xl} - 4px);
 }
 
 /* Burger */
